--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "firebase": "^9.6.7",
     "formik": "^2.2.9",
     "materialize-css": "^1.0.0",
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6"
   }
 }
